--- a/src/main.css
+++ b/src/main.css
@@ -7,3 +7,13 @@
 * {
   border: thin solid red;
 }
+.drum-btn {
+  /* padding: 25px; */
+  margin: 5px;
+  min-width: 30px;
+  max-width: 100px;
+  width:100%;
+  min-height: 30px;
+  max-height: 100px;
+  height:100%;
+}
