--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,7 @@
   border: thin solid red;
 }
 .drum-btn {
-  /* padding: 25px; */
+  padding: 25px;
   margin: 5px;
   min-width: 30px;
   max-width: 100px;
