--- a/src/css/main.css
+++ b/src/css/main.css
@@ -571,12 +571,6 @@ video {
   }
 }
 
-@media (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-  }
-}
-
 .m-1 {
   margin: 0.25rem;
 }
@@ -593,48 +587,32 @@ video {
   height: 100vh;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
 .w-1 {
   width: 0.25rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-9 {
-  width: 2.25rem;
 }
 
 .w-10 {
   width: 2.5rem;
 }
 
-.w-1\/2 {
-  width: 50%;
+.w-20 {
+  width: 5rem;
 }
 
 .grid-cols-3 {
@@ -643,6 +621,10 @@ video {
 
 .grid-rows-3 {
   grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -657,36 +639,60 @@ video {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .gap-3 {
   gap: 0.75rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
+.self-end {
+  align-self: flex-end;
 }
 
-.p-2 {
-  padding: 0.5rem;
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.border {
+  border-width: 1px;
 }
 
-.p-5 {
-  padding: 1.25rem;
+.border-4 {
+  border-width: 4px;
 }
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.p-0\.5 {
+  padding: 0.125rem;
+}
+
+.p-0 {
+  padding: 0px;
 }
 
 .px-6 {
@@ -699,18 +705,13 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
 .text-center {
   text-align: center;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .shadow-xl {
@@ -737,15 +738,14 @@ video {
     width: 50%;
   }
 
-  .md\:w-1 {
-    width: 0.25rem;
-  }
-
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:flex-row {
     flex-direction: row;
+  }
+}
+
+@media (min-width: 976px) {
+  .lg\:mx-3 {
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
   }
 }
