--- a/src/css/main.css
+++ b/src/css/main.css
@@ -603,6 +603,18 @@ video {
   height: 1.5rem;
 }
 
+.h-1\/2 {
+  height: 50%;
+}
+
+.h-1\/3 {
+  height: 33.333333%;
+}
+
+.h-1\/5 {
+  height: 20%;
+}
+
 .w-1 {
   width: 0.25rem;
 }
@@ -613,6 +625,14 @@ video {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .grid-cols-3 {
@@ -712,6 +732,10 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .shadow-xl {
