adds conditional height to switch container

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -615,6 +615,26 @@ video {
   height: 20%;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-48 {
+  height: 12rem;
+}
+
+.h-64 {
+  height: 16rem;
+}
+
+.h-full {
+  height: 100%;
+}
+
 .w-1 {
   width: 0.25rem;
 }
