--- a/src/css/main.css
+++ b/src/css/main.css
@@ -752,6 +752,11 @@ video {
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
+.bg-emerald-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(52 211 153 / var(--tw-bg-opacity));
+}
+
 .p-1 {
   padding: 0.25rem;
 }
