--- a/src/css/main.css
+++ b/src/css/main.css
@@ -603,6 +603,10 @@ video {
   height: 100%;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .w-32 {
   width: 8rem;
 }
@@ -613,6 +617,10 @@ video {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .grid-cols-3 {
@@ -661,6 +669,14 @@ video {
 
 .gap-3 {
   gap: 0.75rem;
+}
+
+.self-center {
+  align-self: center;
+}
+
+.justify-self-center {
+  justify-self: center;
 }
 
 .rounded-md {
