--- a/src/main.css
+++ b/src/main.css
@@ -5,5 +5,6 @@
 @tailwind utilities;
 
 .app {
-  background-image: url("https://www.transparenttextures.com/patterns/carbon-fibre-big.png");
+  background-color: #52718c;
+  background-image: url("https://www.transparenttextures.com/patterns/clean-gray-paper.png");
 }
